@@ -44,7 +44,6 @@ AC_PROG_CC
 AC_PROG_CPP
 AC_ISC_POSIX
 AC_HEADER_STDC
-AC_ARG_PROGRAM
 AM_PROG_LIBTOOL
 
 AM_PATH_ORBIT2
