@@ -33,10 +33,10 @@
 #define DEVHELP_BOOK_INDEX_OAFIID "OAFIID:GNOME_DevHelp_BookIndex"
 
 #define TYPE_BOOK_INDEX			(book_index_get_type ())
-#define BOOK_INDEX(obj)			(GTK_CHECK_CAST ((obj), TYPE_BOOK_INDEX, BookIndex))
-#define BOOK_INDEX_CLASS(klass)		(GTK_CHECK_CLASS_CAST ((klass), TYPE_BOOK_INDEX, BookIndexClass))
-#define IS_BOOK_INDEX(obj)		(GTK_CHECK_TYPE ((obj), TYPE_BOOK_INDEX))
-#define IS_BOOK_INDEX_CLASS(klass)	(GTK_CHECK_CLASS_TYPE ((obj), TYPE_BOOK_INDEX))
+#define BOOK_INDEX(obj)			(G_TYPE_CHECK_INSTANCE_CAST ((obj), TYPE_BOOK_INDEX, BookIndex))
+#define BOOK_INDEX_CLASS(klass)		(G_TYPE_CHECK_CLASS_CAST ((klass), TYPE_BOOK_INDEX, BookIndexClass))
+#define IS_BOOK_INDEX(obj)		(G_TYPE_CHECK_INSTANCE_TYPE ((obj), TYPE_BOOK_INDEX))
+#define IS_BOOK_INDEX_CLASS(klass)	(G_TYPE_CHECK_CLASS_TYPE ((obj), TYPE_BOOK_INDEX))
 
 
 typedef struct _BookIndex       BookIndex;
@@ -60,7 +60,7 @@ struct _BookIndexClass
                                const GnomeVFSURI   *uri);
 };
 
-GtkType          book_index_get_type      (void);
+GType            book_index_get_type      (void);
 GtkWidget *      book_index_new           (Bookshelf     *bookshelf);
 
 void             book_index_open_node     (BookIndex     *index,
